Fix alignment of block quote

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -511,7 +511,7 @@ header .h1-container .subtitle-container img {
   width: 60%;
   margin: 2em 0;
   padding-left: 1em;
-  text-align: right;
+  text-align: left;
 }
 .block-quote p {
   font-size: 1rem;
